--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "checkmate",
   "packageManager": "bun@1.1.33",
   "private": true,
-  "workspaces": ["apps/*", "packages/*"]
+  "workspaces": ["apps/*", "packages/*"],
+  "devDependencies": {
+    "@alex-grover/biome-config": "^0.0.3",
+    "@biomejs/biome": "1.9.4"
+  }
 }
