--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -12,7 +12,10 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "plugins": ["expo-router"],
+    "ios": {
+      "bundleIdentifier": "com.checkmate.app"
+    },
+    "plugins": ["expo-router", "expo-secure-store"],
     "experiments": {
       "typedRoutes": true
     }
