--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,22 +1,32 @@
 {
   "name": "mobile",
   "private": true,
-  "main": "expo-router/entry",
+  "main": "entrypoint.js",
   "version": "0.0.1",
   "scripts": {
     "dev": "expo start",
     "check-types": "tsc"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
+    "@privy-io/expo": "^0.29.3",
+    "@privy-io/expo-native-extensions": "^0.0.3",
     "expo": "~51.0.28",
+    "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
