--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,12 +2,19 @@
   "name": "backend",
   "scripts": {
     "check-types": "tsc",
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "hono": "^4.6.9"
+    "drizzle-orm": "^0.36.0",
+    "hono": "^4.6.9",
+    "pg": "^8.13.1",
+    "valibot": "^1.0.0-beta.3"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.27.1"
   }
 }
