--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -15,7 +15,7 @@
     "ios": {
       "bundleIdentifier": "com.checkmate.app"
     },
-    "plugins": ["expo-router", "expo-secure-store"],
+    "plugins": ["expo-router", "expo-secure-store", "expo-font"],
     "experiments": {
       "typedRoutes": true
     }
