--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,10 +11,12 @@
     "@ethersproject/shims": "^5.7.0",
     "@privy-io/expo": "^0.29.3",
     "@privy-io/expo-native-extensions": "^0.0.3",
+    "@tamagui/core": "^1.116.12",
     "expo": "~51.0.28",
     "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tamagui/babel-plugin": "^1.116.12",
     "@types/react": "~18.2.45",
     "typescript": "~5.3.3"
   }
